Add '26.2-snapshot-6' sources